--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* Home Section */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home-main{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #F5F7FB;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.home-title{
+  margin-bottom: 7px;
+  font-family: 'Karla', sans-serif;
+  font-size: 31px;
+  color: #293264;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-description{
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  color: #293264;
+  margin-bottom: 29px;
+}
+
+.start-button{
+  width: 193px;
+  height: 52px;
+  background: #4D5B9E;
+  border-radius: 15px;
+  border: none;
+  color: #F5F7FB;
+  font-family: 'Inter', sans-serif;
+  cursor: pointer
+}
+
+/* Quiz Section */
+
+.quiz-main{
+  width: 100%;
+}
+
+.question-wrapper{
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  padding: 0px;
+  margin: 0px;
+}
+
+.question{
+  font-family: 'Karla';
+  font-size: 16px;
+  color: #293264;
+  margin: 15px 
+}
+
+.option-wrapper{
+  height: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.options{
+  max-width: 80px;
+  min-width: 40px;
+  min-height: 21px;
+  border: 1px solid #4D5B9E;
+  border-radius: 8px;
+  font-family: 'Inter', sans-serif;
+  font-size: 11px;
+  color: #293264;
+  padding: 3px
+}
+
+.options:hover{
+  cursor: pointer;
+  transform: scale(1.1)
+}
+
+.check-button{
+  width: 120px;
+  height: 45px;
+  background: #4D5B9E;
+  border-radius: 10px;
+  border: none;
+  color: #F5F7FB;
+  font-family: 'Inter', sans-serif;
+  cursor: pointer;
+  margin: 20px 160px;
+  padding: 2px
+}
+
+.check-button:hover{
+  cursor: pointer;
+  transform: scale(1.1)
 }
