--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@
   padding: 0px;
 }
 
+body{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+}
+
 /* Home Section */
 
 .home-main{
@@ -43,7 +51,11 @@
 /* Quiz Section */
 
 .quiz-main{
-  width: 100%;
+  max-width: 600px;
+  border: 2px solid #4D5B9E;
+  border-radius: 10px;
+  padding: 0 15px;
+  margin-top: 60px;
 }
 
 .question-wrapper{
