--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ body{
   border-radius: 10px;
   padding: 0 15px;
   margin-top: 60px;
+  box-shadow:  5px 5px 4px rgba(0, 0, 0, 0.2);
 }
 
 .question-wrapper{
